<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/facebook_login_backgroud"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/languages"
        android:textColor="@color/primaryTextColor"
        android:textSize="12sp"
        android:textStyle="normal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:hint="@string/nameLogin"
        app:hintTextColor="@color/secondaryTextColor"
        app:boxStrokeColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languages"
        app:layout_constraintBottom_toTopOf="@id/ti_email">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameLogin"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:hintTextColor="@color/secondaryTextColor"
        app:boxStrokeColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_name"
        app:layout_constraintBottom_toTopOf="@id/ti_password">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/secondaryTextColor"
        app:boxStrokeColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_email">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        app:shapeAppearance="@style/ShapeAppearance.MyApp.SmallComponent"
        app:backgroundTint="@color/highlightColor"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        app:layout_constraintBottom_toTopOf="@id/or"
    />

    <View
        android:id="@+id/line_left"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/enter"
        app:layout_constraintBottom_toTopOf="@id/create"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/or"
        android:textColor="@color/iconStrokeColor"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/line_left"
        app:layout_constraintEnd_toStartOf="@id/line_right"
        app:layout_constraintTop_toBottomOf="@id/enter"
        app:layout_constraintBottom_toTopOf="@id/create"
        />

    <View
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter"
        app:layout_constraintBottom_toTopOf="@id/create"
        />

    <Button
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/create"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        app:shapeAppearance="@style/ShapeAppearance.MyApp.SmallComponent"
        app:backgroundTint="@color/createButtonColor"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>